--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -92,7 +92,7 @@
         <li class="dropdown nav-item me-5 my-auto">
           <a class="dropdown-toggle d-flex align-items-center hidden-arrow mini-profile" href="#"
             id="navbarDropdownMenuAvatar" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
-            <img src="<%= session.picture %>" alt="profile" class="w-100"/>
+            <img src="<%= session.picture %>" alt="profile" class="w-100 h-100"/>
           </a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
             <li>
