--- a/views/pages/invoices.ejs
+++ b/views/pages/invoices.ejs
@@ -1,4 +1,26 @@
 <%- include('../partials/header') %>
+<style>
+    .dd-selected-image,
+    .dd-option-image {
+        margin: 0.85em 0.5em;
+        width: 35px !important;
+        height: 35px !important;
+    }
+
+    .dd-selected,
+    .dd-option {
+        padding: 0;
+        height: 60px;
+    }
+
+    .dd-option-text {
+        line-height: 0;
+    }
+
+    label.dd-selected-text {
+        line-height: 62px !important;
+    }
+</style>
 
 <body>
     <div class="container-lg mt-5 mb-5 p-auto">
@@ -7,97 +29,243 @@
             <ol class="breadcrumb bg-light">
                 <li class="breadcrumb-item"><a href="/">หน้าแรก</a></li>
                 <li class="breadcrumb-item"><a href="/cart">รายการที่สั่ง</a></li>
-                <li class="breadcrumb-item active" aria-current="page">ออเดอร์ ####</li>
+                <li class="breadcrumb-item active" aria-current="page">ออเดอร์ #<%= orders[0].order_id %></li>
             </ol>
         </div>
 
-        <div class="row">
-            <div class="col">
+        <div class="d-flex">
+            <div class="col-8">
                 <div class="card">
-                    <div class="row m-3">
+                    <div class=" m-3">
                         <div class="card-header mb-3 d-flex justify-content-between">
                             <h4 class="m-0">รายละเอียดรายการ</h4>
+                            <% if (orders[0].order_status === 'waitpay') { %>
                             <div class="text-center alert-warning px-4">
                                 รอชำระ
                             </div>
+                            <% } %>
                         </div>
-                        <div class="col-3 h-100">
-                            <div class="myorder-product-img">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRudVYQys6rTbDytpASp-NC6nJkVT8Tiq2fog&usqp=CAU"
-                                    alt="" class="imageFitBox">
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <h4>ชื่อสินค้า</h4>
-                            <div class="collapse-horizontal">
-                                <span class="mb-2"> ขนาดของชิ้นงาน : </span><br>
-                                <span class="mb-2"> ออฟชั่น x : </span><br>
-                                <span class="mb-2"> ออฟชั่น x : </span><br>
-                                <span class="mb-2"> ออฟชั่น x : </span><br>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="m-3 col">
-                        <div class="mb-2 mx-3">
-                            <div class="my-2 d-flex justify-content-between">
-                                <span>ยอดรวมสินค้า (x รายการ)</span>
-                                <span>
-                                    xxx
-                                </span>
-                            </div>
-                            <div class="my-2 d-flex justify-content-between">
-                                <span>ค่าส่ง</span>
-                                <span>
-                                    x
-                                </span>
-                            </div>
-                            <div class="my-2 d-flex justify-content-between">
-                                <span>VAT 7%</span>
-                                <span>
-                                    x
-                                </span>
-                            </div>
-                            <div class="border-top pt-3 my-2 d-flex justify-content-between">
-                                <b>ยอดที่ต้องชำระ</b>
-                                <div class="d-flex">
-                                    <span class="fw-bold me-2" id="totalPrice">
-                                        xxx
-                                    </span>
-                                    <span class="fw-bold" id="newPrice">
-                                    </span>
+                        <div class="px-3">
+                            <% let sumprice = 0; %>
+                            <% let shipmentprice = orders[0].shipment_price; %>
+                            <% let couponDiscount = 0; %>
+                            <% orders[0].order_detail.forEach((order, index) => { %>
+                            <div class="row my-2 py-2">
+                                <div class="col-3 h-100">
+                                    <div class="myorder-product-img">
+                                        <img src="<%= order.picture %>" alt="" class="imageFitBox">
+                                    </div>
+                                </div>
+                                <div class="col-5">
+                                    <h4><%= order.productName %></h4>
+                                    <div class="collapse-horizontal">
+                                        <span class="mb-2"> ขนาดของชิ้นงาน : <%= order.size %></span><br>
+                                        <% order.options.forEach((option) => { %>
+                                        <span class="mb-2"> <%= option.option_type %> :
+                                            <%= option.option_name %></span><br>
+                                        <% }) %>
+                                    </div>
+                                </div>
+                                <div class="col-2">
+                                    <h5>จำนวน</h5>
+                                    <p><%= order.quantity %></p>
+                                </div>
+                                <div class="col-2">
+                                    <h5>ราคา</h5>
+                                    <p><%= money.format(order.price) %></p>
                                 </div>
                             </div>
+                            <% sumprice += order.price %>
+                            <% }) %>
+                            <% let vat = sumprice * 7 / 100; %>
                         </div>
-
                     </div>
                     <div class="m-3 col">
                         <div class="card-header mb-3">
                             <h4 class="m-0">ที่อยู่จัดส่ง</h4>
                         </div>
                         <div class="mx-3">
-                            <b>ชื่อ</b> <br>
-                            <span>ที่อยู่จัดส่ง</span>
+                            <% address.forEach((addr) => { %>
+                            <b id="ad-name"><%= addr.name %></b> <br>
+                            <span class="card-text" id="ad-info">
+                                <%= addr.address %> <%= addr.province %> <%= addr.postcode %>
+                            </span> <br>
+                            <span id="ad-tel"><%= addr.telephone%></span>
+                            <% }) %>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-4">
-                <div class="card">
-                    <div class="card-header">
-                        <h4>ชำระเงิน</h4>
-                    </div>
-                    <div class="card-body text-center">
-                        <div class="cart-product-picture mb-3">
-                            <img src="" alt="" class="imageFitBox" draggable="false">
+                <div class="sticky-top">
+                    <div class="card" id="paymentSection">
+                        <div class="card-header d-flex justify-content-between">
+                            <h4 class="mt-2">ชำระเงิน</h4>
+                            <button class="btn btn-small btn-link" data-bs-toggle="modal"
+                                data-bs-target="#selectPayment">เปลี่ยน</button>
                         </div>
-                        <h5 class="alert-warning p-3">ยอดที่ต้องชำระ xxx บาท</h5>
-                        <p>หลังจากสแกนและโอนเงินแล้ว กรุณาอัปโหลดหลักฐานสลิปการโอนและกดยืนยันการชำระ </p>
-                        <input class="btn btn-secondary" type="file">
+                        <div class="card-body text-center">
+                            <div id="showpayment">
+                                <% if (payment[0].payment_method_id == '0') { %>
+                                <div class="border mb-3">
+                                    <img src="/assets/img/prompt-pay.png" alt="" class="w-75 px-4 mt-4">
+                                    <img src="<%= qrcode %>" alt="" class="w-75 h-100 object-cover" draggable="false">
+                                </div>
+                                <% } else if (payment[0].payment_method_id != '0') {%>
+                                <div class="border mb-3 pt-3">
+                                    <img src="/assets/img/logoBank/<%= bankSelect[0].bank %>.png" alt="" class="w-25">
+                                    <div class="mt-3">
+                                        <b class="fs-5"><%= bankSelect[0].number %></b>
+                                        <p><%= bankSelect[0].name %></p>
+                                    </div>
+                                </div>
+                                <% } %>
+                            </div>
+                            <h5 class="alert-warning p-3">ยอดที่ต้องชำระ
+                                <%= money.format(sumprice + shipmentprice + vat + couponDiscount) %></h5>
+                            <p>หลังจากสแกนและโอนเงินแล้ว กรุณาอัปโหลดหลักฐานสลิปการโอนและกดยืนยันการชำระ </p>
+                            <p>ออเดอร์จะถูกยกเลิกหากไม่ชำระเงินภายใน 24 ชั่วโมงหลังจากสั่งซื้อ</p>
+                            <form action="" method="post">
+                                <input class="btn btn-secondary" type="file" required>
+                                <button class="btn btn-primary fs-6 w-100 mt-5">ยืนยันการชำระ</button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="card">
 
-                        <button class="btn btn-primary fs-6 w-100 mt-5">ยืนยันการชำระ</button>
+                        <div class="card-body text-center">
+                            <div class="mb-2 mx-3">
+                                <div class="my-2 d-flex justify-content-between">
+                                    <span>ยอดรวมสินค้า (<%= orders[0].order_detail.length %> รายการ)</span>
+                                    <span>
+                                        <%= money.format(sumprice) %>
+                                    </span>
+                                </div>
+                                <div class="my-2 d-flex justify-content-between">
+                                    <span>ค่าส่ง</span>
+                                    <span>
+                                        <%= money.format(shipmentprice) %>
+                                    </span>
+                                </div>
+                                <div class="my-2 d-flex justify-content-between">
+                                    <span>VAT 7%</span>
+                                    <span>
+                                        <%= vat %>
+                                    </span>
+                                </div>
+                                <div class="border-top pt-3 my-2 d-flex justify-content-between">
+                                    <b>ยอดที่ต้องชำระ</b>
+                                    <div class="d-flex">
+                                        <span class="fw-bold me-2" id="totalPrice">
+                                            <%= money.format(sumprice + shipmentprice + vat + couponDiscount) %>
+                                        </span>
+                                        <span class="fw-bold" id="newPrice">
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="modal" id="selectPayment" aria-labelledby="selectAddress" role="dialog" aria-hidden="true"
+        tabindex="-1">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">เปลี่ยนวิธีชำระเงิน</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="d-flex justify-content-center flex-wrap">
+                        <% if(promptpay.length > 0 && promptpay[0].status === 1) { %>
+                        <div class="form-select-payment m-2 p-3 border text-center overflow-hidden <%= payment[0].payment_method_id == '0' ? 'active' : '' %>"
+                            style="width: 230px;">
+                            <div>
+                                <div class="m-auto mb-2" style="height: 60px;">
+                                    <img src="/assets/img/prompt-pay.png" alt="" class="w-75">
+                                </div>
+                                <h6>QR Code PromptPay</h6>
+                            </div>
+                            <input class="payment-radio" type="radio" name="paymentid" value="0"
+                                <%= payment[0].payment_method_id == '0' ? 'checked' : '' %> />
+                        </div>
+                        <% } %>
+                        <% for( let i = 0; i < banks.length; i++ ) { %>
+                        <div class="form-select-payment m-2 p-3 border text-center overflow-hidden <%= payment[0].payment_method_id == banks[i].bank_id ? 'active' : '' %>"
+                            style="width: 230px;">
+                            <div>
+                                <div class="m-auto mb-2" style=" height: 60px;">
+                                    <img src="/assets/img/logoBank/<%= banks[i].bank %>.png" alt="" class="h-100">
+                                </div>
+                                <% const bankname = banklist.find(row => row.en == banks[i].bank) %>
+                                <h6>โอนเงินผ่านบัญชี<%= bankname.th %></h6>
+                            </div>
+                            <input class="payment-radio" type="radio" name="paymentid" value="<%= banks[i].bank_id %>"
+                                <%= payment[0].payment_method_id == banks[i].bank_id ? 'checked' : '' %> />
+                        </div>
+                        <% } %>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn" id="closeInsert" data-bs-dismiss="modal"
+                        aria-label="Close">ยกเลิก</button>
+                    <button type="submit" id="changePayment" class="btn btn-primary">ยืนยัน</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <%- include('../partials/footer') %>
 </body>
+
+<script>
+    $('#paymentMethod').ddslick({
+        width: '100%',
+        height: 150,
+        imagePosition: "left",
+    });
+    $('#paymentMethod .dd-selected-value').attr('name', 'paymentMethod')
+
+    $(document).ready(function () {
+        $('.form-select-payment').each(function () {
+            $(this).on('click', function () {
+                $('.form-select-payment').removeClass('active');
+                $(this).addClass('active');
+            })
+        })
+
+        $('#changePayment').click(function () {
+            const paymentid = $('input[name="paymentid"]:checked').val();
+            $.ajax({
+                url: `/changepayment/<%= orders[0].order_id %>/${paymentid}`,
+                type: 'POST',
+                success: function () {
+                    $('#selectPayment').modal('hide');
+                    let text;
+                    let loading = `    <div class="backdrop">
+        <div class="d-flex justify-content-center align-self-center">
+            <div class="spinner-border text-light fs-1" role="status">
+              <span class="visually-hidden"></span>
+            </div>
+          </div>
+    </div>`
+                    $('body').append(loading)
+                    setTimeout(() => {
+                        $('#showpayment').load(location.href + " #showpayment");
+                        $('.backdrop').remove();
+                    }, 800);
+                },
+                error: function (xhr, status, error) {
+                    console.error('Error deleting item:', error);
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'มีบางอย่างผิดพลาด...',
+                        text: 'กรุณาลองเลือกใหม่ภายหลัง',
+                    })
+                }
+            });
+        })
+    })
+</script>
